chore(fees): wording

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -154,7 +154,7 @@
     "hide_seed": "Hide seed phrase",
     "reveal_seed": "Reveal seed phrase",
     "show_logs": "Show logs",
-    "show_fee_config": "Show fee configuration",
+    "show_fee_config": "Show fee settings",
     "button_lock_wallet": "Lock wallet",
     "button_locking_wallet": "Locking...",
     "button_switch_wallet": "Switch wallet",
@@ -171,9 +171,9 @@
     "confirm_locking_modal_body_earn": "Earn is active. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
     "confirm_locking_modal_body_jam": "A collaborative transaction is being executed. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
     "fees": {
-      "title": "Fee configuration",
+      "title": "Fee settings",
       "description": "Adapt the fee settings according to your needs. Please keep in mind, that these settings are only valid for the lifetime of the service. i.e. they will be reset to default values when the service shuts down or on a system reboot.",
-      "title_general_fee_settings": "General transaction fee settings",
+      "title_general_fee_settings": "General fee settings",
       "radio_tx_fees_blocks": "Targeted blocks",
       "radio_tx_fees_satspervbyte": "sats/vByte",
       "label_tx_fees": "Transaction fee",
