fix(i18n): number strings

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -187,10 +187,10 @@
       "title_max_cj_fee_settings": "Collaborative transaction fee limits",
       "subtitle_max_cj_fee": "Both limits given in this section, relative and absolute, must be exceeded in order to not consider a certain offer.",
       "label_max_cj_fee_abs": "Maximum absolute fee",
-      "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30 000 sats and you choose 9 makers, the maximum fee allowed would be 270 000 sats (0.0027 BTC).",
+      "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30,000 sats and you choose 9 makers, the maximum fee allowed would be 270,000 sats (0.0027 BTC).",
       "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum relative fee",
       "label_max_cj_fee_rel": "Maximum relative fee {{ fee }}",
-      "description_max_cj_fee_rel": "Maximum relative collaborative transaction fee, in fractions of the value. e.g. if your amount is 2 BTC (200 million sats) and fee is 0.1%, the maximum fee allowed would be 0.002 BTC (200 000 sats).",
+      "description_max_cj_fee_rel": "Maximum relative collaborative transaction fee, in fractions of the value. e.g. if your amount is 2 BTC (200 million sats) and fee is 0.1%, the maximum fee allowed would be 0.002 BTC (200,000 sats).",
       "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee between {{ min }} and {{ max }}.",
       "text_button_cancel": "Cancel",
       "text_button_submit": "Save",
