feat(fees): improve wording

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -154,7 +154,7 @@
     "hide_seed": "Hide seed phrase",
     "reveal_seed": "Reveal seed phrase",
     "show_logs": "Show logs",
-    "show_fee_config": "Show fee settings",
+    "show_fee_config": "Set fee limits",
     "button_lock_wallet": "Lock wallet",
     "button_locking_wallet": "Locking...",
     "button_switch_wallet": "Switch wallet",
@@ -171,9 +171,9 @@
     "confirm_locking_modal_body_earn": "Earn is active. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
     "confirm_locking_modal_body_jam": "A collaborative transaction is being executed. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
     "fees": {
-      "title": "Fee settings",
-      "description": "Adapt the fee settings according to your needs. Please keep in mind, that these settings are only valid for the lifetime of the service. i.e. they will be reset to default values when the service shuts down or on a system reboot.",
-      "title_general_fee_settings": "General fee settings",
+      "title": "Fee limits",
+      "description": "Adjust the fee limits according to your needs. These settings will be reset to default values when the JoinMarket service restarts, e.g. on a system reboot.",
+      "title_general_fee_settings": "Mining fees",
       "radio_tx_fees_blocks": "Targeted blocks",
       "radio_tx_fees_satspervbyte": "sats/vByte",
       "label_tx_fees": "Transaction fee",
@@ -184,7 +184,7 @@
       "label_tx_fees_factor": "Fee randomization",
       "description_tx_fees_factor": "Rate variance randomization around the transaction fee. If you set your fee target to 10 sats/vbyte and the factor to 30%, it might use any value between 7 and 13 sats/vbyte for your transactions. Default is 20%.",
       "feedback_invalid_tx_fees_factor": "Please provide a valid fee randomization value between {{ min }} and {{ max }}.",
-      "title_max_cj_fee_settings": "Collaborative transaction fee limits",
+      "title_max_cj_fee_settings": "Maker fees",
       "subtitle_max_cj_fee": "Both limits given in this section, relative and absolute, must be exceeded in order to not consider a certain offer.",
       "label_max_cj_fee_abs": "Maximum absolute fee",
       "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30,000 sats and you choose 9 makers, the maximum fee allowed would be 270,000 sats (0.0027 BTC).",
