feat(fees): improve wording

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -185,11 +185,11 @@
       "feedback_invalid_tx_fees_factor": "Please provide a valid fee randomization value between {{ min }} and {{ max }}.",
       "title_max_cj_fee_settings": "Maker fees",
       "subtitle_max_cj_fee": "Both limits given in this section, relative and absolute, must be exceeded in order to not consider a certain offer.",
-      "label_max_cj_fee_abs": "Maximum absolute fee",
+      "label_max_cj_fee_abs": "Maximum fee per taker (absolute)",
       "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30,000 sats and you choose 9 makers, the maximum fee allowed would be 270,000 sats (0.0027 BTC).",
       "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum relative fee",
-      "label_max_cj_fee_rel": "Maximum relative fee {{ fee }}",
-      "description_max_cj_fee_rel": "Maximum relative collaborative transaction fee, in fractions of the value. e.g. if your amount is 2 BTC (200 million sats) and fee is 0.1%, the maximum fee allowed would be 0.002 BTC (200,000 sats).",
+      "label_max_cj_fee_rel": "Maximum fee in total {{ fee }}",
+      "description_max_cj_fee_rel": "The maximum fee you are willing to pay for a collaborative transaction, as a percentage of the transaction amount. Example: if you send 200 million sats and the maximum fee is set to 0.1%, you will pay 200,000 sats at most.",
       "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee between {{ min }} and {{ max }}.",
       "text_button_cancel": "Cancel",
       "text_button_submit": "Save",
