--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -177,7 +177,7 @@
       "radio_tx_fees_blocks": "Targeted blocks",
       "radio_tx_fees_satspervbyte": "sats/vByte",
       "description_tx_fees_blocks": "The fee estimate is based on a projection of how many sats are needed to get in one of the next N blocks. e.g. if you set it to 20 you are asking to use whatever Bitcoin Core thinks is a realistic fee to get confirmation within the next 20 blocks. Default block target is 3.",
-      "description_tx_fees_satspervbyte": "The fee in satoshi per vByte used to pay for transactions. A transaction without privacy improvements with one input and two outputs is about 250 bytes, a collaborative transaction can be a multiple of that depending on the number of collaborators and their inputs.",
+      "description_tx_fees_satspervbyte": "The fee in sats/vByte used to pay for transactions. A transaction without privacy improvements with one input and two outputs is about 250 bytes, a collaborative transaction can be a multiple of that depending on the number of collaborators and their inputs.",
       "feedback_invalid_tx_fees_blocks": "Please provide a valid block target between {{ min }} and {{ max }}.",
       "feedback_invalid_tx_fees_satspervbyte": "Please provide a valid transaction fee in sats/vByte between {{ min }} and {{ max }}.",
       "label_tx_fees_factor": "Fee randomization",
@@ -186,7 +186,7 @@
       "title_max_cj_fee_settings": "Maker fees",
       "subtitle_max_cj_fee": "Both limits given in this section, relative and absolute, must be exceeded in order to not consider a certain offer.",
       "label_max_cj_fee_abs": "Maximum fee per taker (absolute)",
-      "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30,000 sats and you choose 9 makers, the maximum fee allowed would be 270,000 sats (0.0027 BTC).",
+      "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in sats to pay to a single market maker for a transaction. e.g. if your max amount is 30,000 sats and you choose 9 makers, the maximum fee allowed would be 270,000 sats (0.0027 BTC).",
       "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum relative fee",
       "label_max_cj_fee_rel": "Maximum fee in total {{ fee }}",
       "description_max_cj_fee_rel": "The maximum fee you are willing to pay for a collaborative transaction, as a percentage of the transaction amount. Example: if you send 2 million sats and the maximum fee is set to 0.1%, you will pay 2,000 sats at most.",
