--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -176,6 +176,7 @@
       "title_general_fee_settings": "Mining fees",
       "radio_tx_fees_blocks": "Targeted blocks",
       "radio_tx_fees_satspervbyte": "sats/vByte",
+      "label_tx_fees": "Transaction fee",
       "description_tx_fees_blocks": "The fee estimate is based on a projection of how many sats are needed to get in one of the next N blocks. e.g. if you set it to 20 you are asking to use whatever Bitcoin Core thinks is a realistic fee to get confirmation within the next 20 blocks. Default block target is 3.",
       "description_tx_fees_satspervbyte": "The fee in sats/vByte used to pay for transactions. A transaction without privacy improvements with one input and two outputs is about 250 bytes, a collaborative transaction can be a multiple of that depending on the number of collaborators and their inputs.",
       "feedback_invalid_tx_fees_blocks": "Please provide a valid block target between {{ min }} and {{ max }}.",
