--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -186,11 +186,11 @@
       "feedback_invalid_tx_fees_factor": "Please provide a valid fee randomization value between {{ min }} and {{ max }}.",
       "title_max_cj_fee_settings": "Collaborator fees",
       "subtitle_max_cj_fee": "An order will be rejected only if both limits are exceeded.",
-      "label_max_cj_fee_abs": "Maximum fee per collaborator (absolute)",
       "description_max_cj_fee_abs": "The maximum fee you are willing to pay per collaborator. Example: when set to 30,000 sats, the maximum fee in total would be 270,000 sats when using the default of 9 collaborators.",
+      "label_max_cj_fee_abs": "Absolute limit (per collaborator)",
       "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum absolute fee between {{ min }} and {{ max }}.",
-      "label_max_cj_fee_rel": "Maximum fee per collaborator (relative)",
       "description_max_cj_fee_rel": "The maximum fee you are willing to pay per collaborator, as a percentage of the transaction amount. Example: if you send 2 million sats and the maximum fee is set to 0.1%, you will pay 2,000 sats at most.",
+      "label_max_cj_fee_rel": "Relative limit (per collaborator)",
       "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee between {{ min }} and {{ max }}.",
       "text_button_cancel": "Cancel",
       "text_button_submit": "Save",
