feat(fees): improve wording

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -172,13 +172,13 @@
     "confirm_locking_modal_body_jam": "A collaborative transaction is being executed. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
     "fees": {
       "title": "Fee Limits",
-      "description": "Adjust the fee limits according to your needs. These settings will be reset to default values when the JoinMarket service restarts, e.g. on a system reboot.",
+      "description": "Adjust mining fees and fee limits according to your needs. Mining fees relate to transaction priority and depend on mempool conditions. Collaborator fees relate to liquidity price and depend on market conditions. Total fees paid for each transaction depend on the amount of collaborators. Additional collaborators increase privacy, but also fees. These settings will be reset to default values when the JoinMarket service restarts, e.g. on a system reboot.",
       "title_general_fee_settings": "Mining fees",
       "radio_tx_fees_blocks": "Block target",
       "radio_tx_fees_satspervbyte": "sats/vByte",
-      "label_tx_fees": "Base fee",
+      "label_tx_fees": "Base fee (per transaction)",
       "description_tx_fees_blocks": "When using the block target setting, Jam will use Bitcoin Core's fee estimation mechanism to set the base fee dynamically, depending on mempool activity. Default: 3.",
-      "description_tx_fees_satspervbyte": "The fee in sats/vByte used to pay for transactions. A transaction without privacy improvements with one input and two outputs is about 250 bytes, a collaborative transaction can be a multiple of that depending on the number of collaborators and their inputs.",
+      "description_tx_fees_satspervbyte": "Setting a transaction fee in sats/vByte will override the block target setting. Check your mempool to set the mining fee accordingly.",
       "feedback_invalid_tx_fees_blocks": "Please provide a valid block target between {{ min }} and {{ max }}.",
       "feedback_invalid_tx_fees_satspervbyte": "Please provide a valid transaction fee in sats/vByte between {{ min }} and {{ max }}.",
       "label_tx_fees_factor": "Fee randomization",
