--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -188,7 +188,7 @@
       "subtitle_max_cj_fee": "Note: An offer will be rejected only if both limits are exceeded.",
       "label_max_cj_fee_abs": "Absolute limit (per collaborator)",
       "description_max_cj_fee_abs": "The maximum fee you are willing to pay per collaborator. Example: when set to 3,000 sats, the maximum fee in total would be 27,000 sats when using the default of 9 collaborators.",
-      "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum absolute fee between {{ min }} and {{ max }}.",
+      "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum absolute fee in sats between {{ min }} and {{ max }}.",
       "label_max_cj_fee_rel": "Relative limit (per collaborator)",
       "description_max_cj_fee_rel": "The maximum fee you are willing to pay per collaborator, as a percentage of the transaction amount. Example: if you send 2 million sats and the maximum fee is set to 0.1%, you will at most pay 2,000 sats to a single collaborator.",
       "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee between {{ min }} and {{ max }}.",
