i18n(fees): improve wording

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -249,13 +249,13 @@
       "label_num_collaborators": "Collaborators",
       "text_collaborative_tx_enabled": "Payment with privacy improvement",
       "text_collaborative_tx_disabled": "Payment without privacy improvement",
-      "label_estimated_max_collaborator_fee": "Estimated Max. Collaborator Fee",
+      "label_estimated_max_collaborator_fee": "Collaborator Fee",
       "text_estimated_max_collaborator_fee_info_popover": "This value represents a maximum upper limit. The actual fee is likely to be much lower.",
       "label_miner_fee": "Mining fee",
       "text_miner_fee_in_satspervbyte_exact": "{{ value }} sats/vByte",
       "text_miner_fee_in_satspervbyte_randomized": "{{ min }} - {{ max }} sats/vByte",
-      "text_miner_fee_in_targeted_blocks_one": "Next block",
-      "text_miner_fee_in_targeted_blocks_other": "In {{ count }} blocks"
+      "text_miner_fee_in_targeted_blocks_one": "High priority (next block)",
+      "text_miner_fee_in_targeted_blocks_other": "To be included in {{ count }} blocks or earlier"
     },
     "confirm_abort_modal": {
       "title": "Abort payment",
