fix(i18n): lowercase for consistency

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -249,7 +249,7 @@
       "label_num_collaborators": "Collaborators",
       "text_collaborative_tx_enabled": "Payment with privacy improvement",
       "text_collaborative_tx_disabled": "Payment without privacy improvement",
-      "label_estimated_max_collaborator_fee": "Collaborator Fee",
+      "label_estimated_max_collaborator_fee": "Collaborator fee",
       "text_estimated_max_collaborator_fee_info_popover": "This value represents a maximum upper limit. The actual fee is likely to be much lower.",
       "label_miner_fee": "Mining fee",
       "text_miner_fee_in_satspervbyte_exact": "{{ value }} sats/vByte",
