feat: display fee settings on Send page (#532)
* refactor(fees): externalize loading fees to own file

* feat(send): show estimated max. collaborator fee

* feat(send): show miner fee target

* fix(fees): allow zero for all fee config values

* feat(fees): put ≤ before max. fee estimate

* fix(i18n): lowercase for consistency

Co-authored-by: Gigi <dergigi@pm.me>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -248,7 +248,14 @@
       "text_source_jar": "Jar {{ jarId }}",
       "label_num_collaborators": "Collaborators",
       "text_collaborative_tx_enabled": "Payment with privacy improvement",
-      "text_collaborative_tx_disabled": "Payment without privacy improvement"
+      "text_collaborative_tx_disabled": "Payment without privacy improvement",
+      "label_estimated_max_collaborator_fee": "Collaborator fee",
+      "text_estimated_max_collaborator_fee_info_popover": "This value represents a maximum upper limit. The actual fee is likely to be much lower.",
+      "label_miner_fee": "Mining fee",
+      "text_miner_fee_in_satspervbyte_exact": "{{ value }} sats/vByte",
+      "text_miner_fee_in_satspervbyte_randomized": "{{ min }} - {{ max }} sats/vByte",
+      "text_miner_fee_in_targeted_blocks_one": "High priority estimate (next block)",
+      "text_miner_fee_in_targeted_blocks_other": "Using estimate for inclusion in next {{ count }} blocks"
     },
     "confirm_abort_modal": {
       "title": "Abort payment",
