feat(earn): improve wording

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -295,7 +295,7 @@
     "error_loading_report_failed": "Failed to load earnings report.",
     "alert_starting": "Service is starting.",
     "alert_stopping": "Service is stopping.",
-    "alert_running": "Earning sats...",
+    "alert_running": "Offering sats to earn more sats...",
     "alert_coinjoin_in_progress": "A collaborative transaction is currently in progress.",
     "button_settings": "Offer options",
     "radio_abs_offer_label": "Absolute offer",
