--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -288,14 +288,14 @@
   },
   "earn": {
     "title": "Earn",
-    "subtitle": "By providing liquidity to the market, you improve the privacy of yourself and others. Your sats always remain under your control and never leave your wallet.",
+    "subtitle": "By offering liquidity to the market, you improve the privacy of yourself and others. Your sats always remain under your control and never leave your wallet.",
     "market_explainer": "You can choose how much you want to charge for your offer. Note that you participate and compete in an open market—there is no guarantee that other market participants will take you up on your offer. Being chosen for a collaborative transaction can take some time. Low fees increase your chances.",
     "alert_empty_report": "The report is empty.",
     "text_report_length": "Showing {{ visibleLines }} of {{ linesWithoutHeader }} entries",
     "error_loading_report_failed": "Failed to load earnings report.",
     "alert_starting": "Service is starting.",
     "alert_stopping": "Service is stopping.",
-    "alert_running": "Earning sats...",
+    "alert_running": "Offering sats to earn more sats...",
     "alert_coinjoin_in_progress": "A collaborative transaction is currently in progress.",
     "button_settings": "Offer options",
     "radio_abs_offer_label": "Absolute offer",
@@ -315,6 +315,7 @@
     "button_show_report": "Show earnings report",
     "button_show_orderbook": "Show orderbook",
     "current": {
+      "text_offer": "Offer",
       "text_cjfee": "Fee",
       "text_minsize": "Minimum Size",
       "text_maxsize": "Maximum Size",
