--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -166,8 +166,7 @@
     "label_recipient": "Destinataire",
     "placeholder_recipient": "Entrez l'adresse...",
     "feedback_invalid_recipient": "Veuillez indiquer l'adresse du destinataire.",
-    "label_account": "Niveau de confidentialité à envoyer à partir de",
-    "label_account_dev_mode": "Compte à partir duquel envoyer",
+    "label_source_jar": "Niveau de confidentialité à envoyer à partir de",
     "label_amount": "Montant en sats",
     "placeholder_amount": "Entrez le montant...",
     "feedback_invalid_amount": "Veuillez fournir un montant valide.",
