--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -221,7 +221,8 @@
     "label_recipient": "Recipient",
     "placeholder_recipient": "Enter address or choose jar from wallet...",
     "feedback_reused_address": "This address is already used. To preserve your privacy please choose another one.",
-    "label_account": "Send from",
+    "label_source_jar": "Send from",
+    "title_jar_selector": "Select a jar from your wallet to send the funds to.",
     "label_amount": "Amount in sats",
     "placeholder_amount": "Enter amount...",
     "feedback_invalid_amount": "Please provide a valid amount.",
@@ -425,6 +426,13 @@
         "confirmation_toggle_title": "I have reviewed my inputs carefully",
         "confirmation_toggle_subtitle": "I understand that the locked funds will be inaccessible for the given duration",
         "button_create": "Create Fidelity Bond"
+      },
+      "existing": {
+        "title_active": "Fidelity Bond",
+        "title_expired": "Expired Fidelity Bond",
+        "label_locked_until": "Locked until",
+        "label_expired_on": "Expired on",
+        "label_address": "Timelocked address"
       }
     }
   },
@@ -519,7 +527,7 @@
   },
   "jar_details": {
     "title_tab_utxos": "UTXOs",
-    "title_tab_account": "Details",
+    "title_tab_jar_details": "Details",
     "utxo_list": {
       "title_zero": "No UTXOs in Jar {{ jar }}",
       "title_one": "{{ count }} UTXO in Jar {{ jar }}",
